# eda-agent

./: .env.example  .gitignore  LICENSE  README.md  agent.py  app.py  pipeline.py  prompts.py  pyproject.toml  tools.py
.claude/: CLAUDE.md  settings.local.json
src/: agent.py  app.py  basic_eda.py  config.py  eda_agents.py  pipeline.py  prompts.py
